--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ GMA_EJB/.classpath
 GMA_EJB/.classpath
 GMA_EJB/.classpath
 GMA_EJB/.classpath
+GMA_EJB/.classpath
+GMA_EJB/.settings/org.eclipse.wst.common.project.facet.core.xml
+GMA_EJB/.settings/org.eclipse.wst.common.project.facet.core.xml
+GMA_EJB/.classpath
