--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ GMA_EJB/.classpath
 GMA_EJB/.settings/org.eclipse.wst.common.project.facet.core.xml
 GMA_EJB/.settings/org.eclipse.wst.common.project.facet.core.xml
 GMA_EJB/.classpath
+GMA_WEB/.settings/org.eclipse.wst.common.component
