--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,22 @@ GMA_EJB/.settings/org.eclipse.wst.common.project.facet.core.xml
 GMA_EJB/.settings/org.eclipse.wst.common.project.facet.core.xml
 GMA_EJB/.classpath
 GMA_WEB/.settings/org.eclipse.wst.common.component
+GMA_EJB/.classpath
+GMA_EJB/.project
+GMA_EJB/.classpath
+GMA_EJB/.classpath
+GMA_EJB/.project
+GMA_EJB/.settings/.jsdtscope
+GMA_EJB/.settings/org.eclipse.wst.common.component
+GMA_EJB/build/classes/gma/entities/User.class
+GMA_EJB/src/gma/entities/User.java
+GMA_WEB/.classpath
+GMA_WEB/.project
+GMA_WEB/.settings/org.eclipse.wst.common.component
+GMA_EJB/.classpath
+GMA_EJB/.project
+GMA_EJB/.settings/.jsdtscope
+GMA_EJB/.settings/org.eclipse.wst.common.project.facet.core.xml
+GMA_WEB/.classpath
+GMA_WEB/.project
+GMA_WEB/.settings/org.eclipse.wst.common.component
