--- a/GMA_WEB/WebContent/WEB-INF/web.xml
+++ b/GMA_WEB/WebContent/WEB-INF/web.xml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" version="4.0">
   <display-name>GMA_WEB</display-name>
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-  </welcome-file-list>
+  <filter>
+        <filter-name>userLoginFilter</filter-name>
+        <filter-class>gma.filters.UserLoginFilter</filter-class>
+    </filter>
+    
+    <filter>
+        <filter-name>adminLoginFilter</filter-name>
+        <filter-class>gma.filters.AdminLoginFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>userLoginFilter</filter-name>
+        <url-pattern>/App/*</url-pattern>
+    </filter-mapping>
+	 <filter-mapping>
+        <filter-name>adminLoginFilter</filter-name>
+        <url-pattern>/Admin/*</url-pattern>
+    </filter-mapping>
 </web-app>
